# mlx-whisper-mcp

./: README.md  mlx_whisper_mcp.py  pyproject.toml
